# time-tracking

./: .gitignore  Pipfile  flake.nix  process  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg
docutils/: core.pyi
ibis/: filters.pyi  loaders.pyi  nodes.pyi
src/time_tracking/: __init__.py
src/time_tracking/templates/: daily.html  freexian-jekyll.markdown  project.html  report.html  text.html  totals.html
templates/: daily.html  freexian-jekyll.markdown  freexian-jekyll.rst  freexian.markdown  freexian.rst  project.html  report.html  task.html  text.html  totals.html  wsp.markdown  wsp_project.html  wsp_task.html
time_tracking/: __init__.py
time_tracking/templates/: daily.html  employer.html  freexian-jekyll.markdown  freexian.markdown  project.html  task.html
