[tool.poetry]
name = "time-tracking"
version = "0.0.0"
description = "Track time usage in yaml files"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
license = "GPL3+"

[tool.poetry.dependencies]
python = "^3.8"
docutils = "~=0.14"
ibis = "~=1.6"
PyYAML = "~=5.1"

[tool.poetry.dev-dependencies]
mypy = "~=0.580"
typed-ast = "~=1.1"
isort = "~=4.3"
flake8 = "~=3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
