[tool.poetry]
name = "time-tracking"
version = "0.0.0"
description = "Track time usage in yaml files"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
license = "GPL3+"

[tool.poetry.dependencies]
python = "^3.10"
docutils = "*"
ibis = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
typed-ast = "*"
isort = "*"
flake8 = "*"

[tool.poetry.scripts]
time-tracking = "time_tracking:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
