[project]
name = "time-tracking"
version = "0.0.0"
description = "Track time usage in yaml files"
authors = [{ name = "Brian May", email = "brian@linuxpenguins.xyz" }]
requires-python = ">=3.10,<4"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "docutils",
    "ibis",
    "PyYAML",
]

[project.scripts]
time-tracking = "time_tracking:main"

[dependency-groups]
dev = [
    "mypy",
    "isort",
    "flake8",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
